--- a/src/shared/index.css
+++ b/src/shared/index.css
@@ -1,10 +1,16 @@
-@import 'variables.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 
 :root {
+  --primary: #f0e8d5;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background-color: var(--color-primary);
+  background-color: var(--primary);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,6 +34,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
